2006-05-02  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: add family-warn back in
	* data/gramps.schemas.in: add family-warn back in
	
2006-05-02  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilters.py: Remove.
	* src/Filters: Move filtering to its own package.
	
	* src/RelLib/_BaseObject.py (PrivacyBase): Remove class, as it
	already has its own module.
	* src/AutoComp.py (StandardCustomSelector.fill): Adapt to new types.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add broken
	witness note.

2006-05-01  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: view specific key mapping support
	* src/ViewManager.py: remember last View
	* src/Config/GrampsConfigKeys.py: LAST_VIEW key
	* src/PageView.py: key binding support
	* data/gramps.schemas.in: LAST_VIEW key
	* src/Editors/_EditPersonRef.py (EditPersonRef._select_person): fix
	call to SelectPerson
	* src/DataViews/_PersonView.py (PersonView.define_actions): add
	expand and collapse all node menu entries

2006-05-01  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PedigreeView.py (define_actions): Translate labels.
	* src/DataViews/_SourceView.py (define_actions): Translate labels.
	* src/DataViews/_PlaceView.py (define_actions): Translate labels.
	* src/DataViews/_MediaView.py (define_actions): Translate labels.
	* src/DataViews/_RepositoryView.py (define_actions): Translate labels.
	* src/DataViews/_MapView.py (define_actions): Translate labels.
	* src/DataViews/_EventView.py (define_actions): Translate labels.
	* src/DataViews/_PersonView.py (define_actions) Translate labels.
	* src/PageView.py (BookMarkView.define_actions,
	PersonNavView.define_actions, ListView.define_actions): Translate
	labels.

	* src/plugins/rel_sk.py: Typo.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Skip broken witness.
	* src/GrampsDb/_GrampsDbBase.py (find_backlink_handles): Correctly
	loop over all primary classes looking for a given handle.